--- a/style/styles.css
+++ b/style/styles.css
@@ -1,13 +1,34 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+};
+
 label > input:checked {
     box-shadow: 0 0 0 3px greenyellow;
 }
+fieldset {
+    display: inline;
+}
 
 label {
-    display: inline-block;
+    display: block;
 }
-img {
+.debuff {
     max-height: 110px;
     max-width: 90px;
     width: auto;
     height: auto;
+}
+
+.gauge {
+    max-height: 110px;
+    width: 300px;
+    min-height: 100px;
+    height: auto;
+}
+
+.result p {
+    display: flex;
+    justify-content: center;
+    max-width: 500px;
+    
 }
