--- a/style/styles.css
+++ b/style/styles.css
@@ -26,9 +26,14 @@ label {
     height: auto;
 }
 
-.result p {
+.result {
+    max-width: 650px;
+    min-width: 500px;
+    width: auto;
+}
+p#result {
     display: flex;
     justify-content: center;
-    max-width: 500px;
+    width:auto
     
 }
