--- a/style/styles.css
+++ b/style/styles.css
@@ -13,10 +13,9 @@ label {
     display: block;
 }
 .debuff {
-    max-height: 110px;
+    height: 110px;
     max-width: 90px;
     width: auto;
-    height: auto;
 }
 
 .gauge {
